force-app/main/default/objects/HomeMapFlyOut__e/HomeMapFlyOut__e.object-meta.xml
<CustomObject>
    <label>HomeMapFlyOut</label>
    <pluralLabel>HomeMapFlyOuts</pluralLabel>
</CustomObject>