force-app/main/default/objects/HomeMapFlyOut__e/fields/AdditionalLatitude__c.field-meta.xml
<CustomField>
    <fullName>AdditionalLatitude__c</fullName>
    <label>AdditionalLatitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>