force-app/main/default/objects/HomeMapFlyOut__e/fields/AdditionalLongitude__c.field-meta.xml
<CustomField>
    <fullName>AdditionalLongitude__c</fullName>
    <label>AdditionalLongitude</label>
    <length>13</length>
    <type>Text</type>
</CustomField>