force-app/main/default/objects/HomeMapFlyOut__e/fields/CurrentLat__c.field-meta.xml
<CustomField>
    <fullName>CurrentLat__c</fullName>
    <label>CurrentLat</label>
    <length>13</length>
    <type>Text</type>
</CustomField>