force-app/main/default/objects/HomeMapFlyOut__e/fields/CurrentLongi__c.field-meta.xml
<CustomField>
    <fullName>CurrentLongi__c</fullName>
    <label>CurrentLongi</label>
    <length>13</length>
    <type>Text</type>
</CustomField>