force-app/main/default/objects/HomeMapFlyOut__e/fields/HomeLat__c.field-meta.xml
<CustomField>
    <fullName>HomeLat__c</fullName>
    <label>HomeLat</label>
    <length>13</length>
    <type>Text</type>
</CustomField>