force-app/main/default/objects/HomeMapFlyOut__e/fields/HomeLongi__c.field-meta.xml
<CustomField>
    <fullName>HomeLongi__c</fullName>
    <label>HomeLongi</label>
    <length>13</length>
    <type>Text</type>
</CustomField>