force-app/main/default/objects/HomeMapFlyOut__e/fields/InputType__c.field-meta.xml
<CustomField>
    <fullName>InputType__c</fullName>
    <label>InputType</label>
    <length>13</length>
    <type>Text</type>
</CustomField>